--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_map: ^0.14.0
+  sliding_up_panel: ^2.0.0+1
+  percent_indicator: ^3.4.0
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +63,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - images/
+     - images/map/
+     - images/menu/
+     - images/weather/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
