--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_map: ^0.14.0
   sliding_up_panel: ^2.0.0+1
   percent_indicator: ^3.4.0
+  geolocator: ^7.7.1
   intl: ^0.17.0
   http: ^0.13.4
 
