--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_map: ^0.14.0
   sliding_up_panel: ^2.0.0+1
   percent_indicator: ^3.4.0
+  geolocator: 7.6.2
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
