--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  
+  auto_size_text: ^3.0.0
   cupertino_icons: ^1.0.2
   flutter_map: ^0.14.0
   sliding_up_panel: ^2.0.0+1
   percent_indicator: ^3.4.0
-  geolocator: 7.6.2
-  auto_size_text: ^3.0.0
+  google_maps_flutter: ^2.0.2
+  geolocator: ^7.7.1
+  flutter_spinkit: ^5.1.0
+  dio: ^4.0.0
+  flutter_polyline_points: ^1.0.0
 
 dev_dependencies:
   flutter_test:
